--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@next/font": "^13.3.1",
+    "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-progress": "^1.0.2",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
