--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@next/font": "^13.3.1",
     "@radix-ui/react-accordion": "^1.1.1",
+    "@radix-ui/react-collapsible": "^1.0.2",
+    "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-progress": "^1.0.2",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
