--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next/font": "^13.3.1",
+    "@next/font": "^13.3.4",
     "@radix-ui/react-accordion": "^1.1.1",
     "@radix-ui/react-collapsible": "^1.0.2",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-popover": "^1.0.5",
     "@radix-ui/react-progress": "^1.0.2",
     "@radix-ui/react-separator": "^1.0.2",
