--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.3",
+    "@supabase/supabase-js": "^2.23.0",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
@@ -43,5 +44,8 @@
     "tailwindcss-animate": "^1.0.5",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "encoding": "^0.1.13"
   }
 }
