--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@sanity/vision": "^3.12.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
@@ -35,10 +36,13 @@
     "eslint-config-next": "13.3.1",
     "lucide-react": "^0.176.0",
     "next": "13.3.1",
+    "next-sanity": "^4.3.3",
+    "next-sanity-image": "^6.0.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-otp-input": "^3.0.2",
+    "sanity": "^3.12.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
