--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.3",
+    "@sanity/vision": "^3.12.0",
     "@supabase/supabase-js": "^2.23.0",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
-    "@sanity/vision": "^3.12.0",
     "autoprefixer": "10.4.14",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
@@ -38,10 +38,12 @@
     "next": "13.3.1",
     "next-sanity": "^4.3.3",
     "next-sanity-image": "^6.0.0",
+    "next-share": "^0.20.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-otp-input": "^3.0.2",
+    "react-share": "^4.4.1",
     "sanity": "^3.12.1",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
