--- a/package.json
+++ b/package.json
@@ -22,23 +22,27 @@
     "@radix-ui/react-separator": "^1.0.2",
     "@radix-ui/react-slider": "^1.1.1",
     "@radix-ui/react-toast": "^1.1.3",
-    "@supabase/supabase-js": "^2.23.0",
+    "@supabase/supabase-js": "^2.25.0",
     "@tanstack/react-table": "^8.9.1",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "jsonwebtoken": "^9.0.0",
     "lucide-react": "^0.176.0",
     "next": "13.3.1",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-otp-input": "^3.0.2",
+    "speakeasy": "^2.0.0",
     "tailwind-merge": "^1.12.0",
     "tailwindcss": "3.3.1",
     "tailwindcss-animate": "^1.0.5",
