--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@sanity/vision": "^3.12.0",
     "@supabase/supabase-js": "^2.25.0",
     "@tanstack/react-table": "^8.9.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.0",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
@@ -35,7 +36,7 @@
     "cmdk": "^0.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
-    "jsonwebtoken": "^9.0.0",
+    "jsonwebtoken": "^8.5.1",
     "lucide-react": "^0.176.0",
     "next": "13.3.1",
     "next-sanity": "^4.3.3",
