--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@tanstack/react-table": "^8.9.1",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "18.16.0",
+    "@types/nodemailer": "^6.4.8",
     "@types/react": "18.0.38",
     "@types/react-dom": "18.0.11",
+    "@types/speakeasy": "^2.0.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.5.2",
