--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "cmdk": "^0.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "groq-js": "^1.1.9",
     "jsonwebtoken": "^8.5.1",
     "lucide-react": "^0.176.0",
     "next": "13.3.1",
