--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "class-variance-authority": "^0.5.2",
     "clsx": "^1.2.1",
     "cmdk": "^0.2.0",
+    "country-data-list": "^1.3.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "jsonwebtoken": "^8.5.1",
